Fixed MAGE-6339: The Static block widget doesn't displayed on the Product View Extra hint for bundle product - Added wrapping div for customize and add to GR button for consistency - Qty increments css adjusted

--- a/skin/frontend/enterprise/default/css/styles.css
+++ b/skin/frontend/enterprise/default/css/styles.css
@@ -1314,7 +1314,7 @@ button.btn-cart span {}
 .options-container-small .product-options ul.validation-failed { padding:0 1px !important; position:relative; z-index:2; top:-1px; left:-2px; margin-right:-2px; }
 .product-options li { margin:3px 0; }
 
-.product-view .product-options-bottom .product-pricing { clear:both; }
+.product-options-bottom .product-pricing { clear:both; }
 .product-view .product-options-bottom { padding:0; margin:0 0 5px; }
 .product-view .product-options-bottom .add-to-cart { float:left; padding-right:15px; padding-bottom:20px; }
 .product-view .product-options-bottom .price-box { margin:0 !important; float:right; }
@@ -1384,9 +1384,9 @@ button.btn-cart span {}
 .col3-layout .bundle-summary { left:277px; }
 
 #options-container .product-options { font-size:12px; margin-top:0; font-size:11px; z-index:1; margin:0; width:600px; padding:20px 20px 0; clear:both; position:relative; z-index:1; }
-#options-container .product-options-bottom { padding:0 20px 20px; width:600px; font-size:12px; margin:0 0 5px; line-height:27px; }
+#options-container .product-options-bottom { padding:0 20px 20px; width:600px; margin:0 0 5px; }
 #options-container .product-options-bottom .add-to-cart { float:right; margin:0 0 0 20px; }
-#options-container .product-options-bottom .price-box { margin:0; float:right; }
+#options-container .product-options-bottom .price-box { margin:0 0 15px; float:right; }
 #options-container .product-options-bottom p.required { padding:5px 0 0; width:auto; clear:both; text-align:right; }
 .moving-now {}
 
